# rev_textos

./: .env.example  .gitignore  README.md  RevisorTextos.spec  build_installer.bat  dummy.tex  main.py  pyproject.toml  reproduce_issue.py  reproduce_log.txt  requirements-dev.txt  requirements.txt  setup_script.iss  verify_report.py
config/: settings.json
src/: __init__.py
src/application/: __init__.py
src/application/dto/: __init__.py
src/application/services/: orquestrador_revisao.py
src/core/: __init__.py
src/core/entities/: __init__.py  correcao.py  erro.py  relatorio.py  revisao.py  secao.py  texto_estruturado.py
src/core/enums/: __init__.py  formato_relatorio.py  status_texto.py  tipo_agente.py  tipo_erro.py
src/core/exceptions/: __init__.py  agent_exceptions.py  base_exception.py  config_exceptions.py  pdf_exceptions.py  revisao_exceptions.py  secao_exceptions.py  texto_exceptions.py
src/core/validators/: __init__.py  config_validator.py  secao_validator.py  texto_validator.py
src/core/value_objects/: __init__.py  localizacao_erro.py  metadados_pdf.py  metricas_revisao.py
src/infrastructure/: __init__.py
src/infrastructure/ai/: __init__.py  agents.py  ai_gateway_factory.py  gemini_gateway.py  (+3 more)
src/presentation/: __init__.py  main_window.py  tema.py
tests/: conftest.py  test_cancellation.py  test_config_dialog_ui.py  test_entities.py  test_enums.py  test_exceptions.py  test_gemini_gateway_extra.py  test_infrastructure.py  test_log_formato.py  test_value_objects.py  verify_consistency_table.py  verify_html_rendering.py  verify_reports.py
(+43 files in other folders)
